Selector fix (unreleased calendars)

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,13 @@
                 </div>
 
                 <div class="button-group">
+                    <button id="todayBtn" class="btn btn-primary" title="Scroll to today">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <path d="M12 6v6l4 2"></path>
+                        </svg>
+                        <span class="desktop-only">Today</span>
+                    </button>
                     <button id="exportAllBtn" class="btn btn-success" style="display: none;">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
