--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,8 @@
                 </div>
             </div>
 
+            <div id="skupinaFilters" style="display: none; margin-top: 0.75rem;"></div>
+
             <div id="error" class="error" style="display: none;"></div>
         </div>
 
